--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,15 +11,15 @@
       </p>
     </div>
     <div class="col-md-10 mx-auto col-lg-5">
-      <form class="p-4 p-md-5 border rounded-3 bg-light">
-        <div class="text-center mb-3" > Hey! </div>
+      <form class="p-4 p-md-5 border rounded-3 bg-light" action="{{ url_for('core.login') }}" method="post">
+        <div class="text-center mb-3"> Hey! </div>
 
         <div class="form-floating mb-3">
-          <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+          <input type="email" name="userEmail" class="form-control" id="floatingInput" placeholder="name@example.com">
           <label for="floatingInput">Email address</label>
         </div>
         <div class="form-floating mb-3">
-          <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+          <input type="password" name="inputPassword" class="form-control" id="floatingPassword" placeholder="Password">
           <label for="floatingPassword">Password</label>
         </div>
         <div class="checkbox mb-3">
@@ -28,9 +28,21 @@
             <input type="checkbox" value="remember-me"> Remember me
           </label> -->
         </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
+        <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
+        <div>
+          {% with messages = get_flashed_messages() %}
+          {% if messages %}
+          <ul class="text-center text-success font-weight-bold">
+            {% for message in messages %}
+            {{ message }}
+            {% endfor %}
+          </ul>
+          {% endif %}
+          {% endwith %}
+        </div>
         <hr class="my-4">
-        <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
+        <small class="text-muted">Don't have account yet? Don't worry sign up <a
+            href="{{ url_for('core.register') }}">here</a></small>
       </form>
     </div>
   </div>
