--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,28 +1,34 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> -->
-<div class="container-fluid">
-    <a class="navbar-brand" href="{{url_for('core.index')}}">LD Demo</a>
-    
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    
-    <div class="collapse navbar-collapse" id="navbarColor02">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{{url_for('core.index')}}">LD Demo</a>
 
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"> <a class="nav-link" href="{{url_for('core.fashion')}}" >Fashion</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="{{ url_for('core.electronics')}}" >Electronics</a> </li>
-        
-            <!-- hidden link -->
-            <!-- <li class="nav-item"> <a class="nav-link" href="#">Career</a> </li> -->
-        </ul>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02"
+            aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <!-- make it a feature flag -->
-        <form class="d-flex" role="search" data-form-type="">    
-            <input class="form-control me-2" type="search" placeholder="Search" data-form-type="">
-            <button class="btn btn-outline-light" type="submit" data-form-type="" data-dashlane-label="true">Search</button>
-        </form>
-        <!-- ----- -->
+        <div class="collapse navbar-collapse" id="navbarColor02">
+
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item"> <a class="nav-link" href="{{url_for('core.fashion')}}">Fashion</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="{{ url_for('core.electronics')}}">Electronics</a> </li>
+
+                <!-- hidden link -->
+                <!-- <li class="nav-item"> <a class="nav-link" href="#">Career</a> </li> -->
+            </ul>
+
+            <!-- make it a feature flag -->
+            <form class="d-flex" role="search" data-form-type="">
+                <input class="form-control me-2" type="search" placeholder="Search" data-form-type="">
+                <button class="btn btn-outline-light" type="submit" data-form-type=""
+                    data-dashlane-label="true">Search</button>
+            </form>
+            {% if current_user.is_authenticated %}
+            <button class="btn btn-outline-dark d-flex me-2 ms-2"> <a class="nav-link"
+                    href="{{ url_for('core.logout')}}"> Logout </a></button>
+            {% endif %}
+            <!-- ----- -->
+        </div>
     </div>
-</div>
 </nav>
