--- a/app/templates/shop-fashion.html
+++ b/app/templates/shop-fashion.html
@@ -2,8 +2,15 @@
 
 {% block stylesheet %}
 <link href="{{ url_for('static', filename='css/shop.css') }}" rel="stylesheet">
+<link href="{{ url_for('static', filename='css/notification.css') }}" rel="stylesheet">
+<script src="{{url_for('static',filename='js/notification.js')}}"> </script>
 {% endblock %}
 
+        {% block header %}
+
+                {% include 'beta/partials/nav-notification.html' %}
+
+        {% endblock %}
 {% block content %}
 
 <section class="section-products">
