--- a/app/templates/beta/partials/nav-notification.html
+++ b/app/templates/beta/partials/nav-notification.html
@@ -1,5 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> -->
+
+<nav id="nav-dark" class="navbar navbar-expand-lg navbar-dark bg-primary">
+             <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> -->
     <div class="container-fluid">
         <a class="navbar-brand" href="{{url_for('core.index')}}">LD Demo</a>
 
@@ -39,14 +40,17 @@
                     href="{{ url_for('core.dashboard')}}">Dashboard</a> </button>
 
             <!-- make it a feature flag -->
-            <form class="d-flex" role="search" data-form-type="">
-                <input class="form-control me-2" type="search" placeholder="Search" data-form-type="">
-                <button class="btn btn-outline-light" type="submit" data-form-type=""
-                    data-dashlane-label="true">Search</button>
-            </form>
+            <div  id="search-feature" >
+                <form class="d-flex" role="search" data-form-type="">
+                    <input class="form-control me-2" type="search" placeholder="Search" data-form-type="">
+                    <button class="btn btn-outline-light" type="submit" data-form-type=""
+                        data-dashlane-label="true">Search</button>
+                </form>
+            </div>
+            
             <!-- ----- -->
             {% if current_user.is_authenticated %}
-            <button class="btn btn-outline-dark d-flex me-2 ms-2"> <a class="nav-link"
+            <button class="btn btn-outline-light d-flex me-2 ms-2"> <a class="nav-link"
                     href="{{ url_for('core.logout')}}"> Logout </a></button>
             {% endif %}
         </div>
