--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,3 +1,7 @@
+
+{% extends 'base.html' %}
+
+{% block content %}
 <body class="bg-dark">
     <div class="container">
       <div class="card card-register mx-auto mt-5">
@@ -5,19 +9,19 @@
         <div class="card-header">Register an Account</div>
         <div class="card-body">
           <form action="{{ url_for('core.register') }}" method="post">
-            <div class="form-group">
+            <div class="form-group mb-3">
               <label for="userEmail">Email address</label>
               <input class="form-control" id="userEmail" name="userEmail" type="email" aria-describedby="emailHelp" placeholder="Enter email">
             </div>
             <div class="form-group">
               <div class="form-row">
-                <div class="col-md-6">
+                <div class="col-md-6 mb-3">
                   <label for="inputPassword">Password</label>
                   <input class="form-control" id="inputPassword" name="inputPassword" type="password" placeholder="Password">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 mb-3">
                   <label for="confirmPassword">Confirm password</label>
-                  <input class="form-control" id="confirmPassword" name="confirmPassword" type="password" placeholder="Confirm password">
+                  <input for="floatingPassword" class="form-control" id="confirmPassword" name="confirmPassword" type="password" placeholder="Confirm password">
                 </div>
               </div>
             </div>
@@ -41,3 +45,6 @@
         </div>
       </div>
     </div>
+
+
+{% endblock %}
