--- a/app/templates/shop-electronic.html
+++ b/app/templates/shop-electronic.html
@@ -1,31 +1,41 @@
 {% extends 'base.html' %}
 
 {% block stylesheet %}
-<link href="{{ url_for('static', filename='css/shop.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/shop.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/notification.css') }}" rel="stylesheet">
+        <script src="{{url_for('static',filename='js/notification.js')}}"> </script>
+        <style>
+                .section-products #product-1 .part-1::before {
+                        background: url("https://images.pexels.com/photos/788946/pexels-photo-788946.jpeg") no-repeat center;
+                        background-size: cover;
+                        transition: all 0.3s;
+                }
 
-<style>
-        .section-products #product-1 .part-1::before {
-                background: url("https://images.pexels.com/photos/788946/pexels-photo-788946.jpeg") no-repeat center;
-                background-size: cover;
-                transition: all 0.3s;
-        }
+                .section-products #product-2 .part-1::before {
+                        background: url("https://images.pexels.com/photos/205926/pexels-photo-205926.jpeg") no-repeat center;
+                        background-size: cover;
+                }
 
-        .section-products #product-2 .part-1::before {
-                background: url("https://images.pexels.com/photos/205926/pexels-photo-205926.jpeg") no-repeat center;
-                background-size: cover;
-        }
+                .section-products #product-3 .part-1::before {
+                        background: url("https://images.pexels.com/photos/1298601/pexels-photo-1298601.jpeg") no-repeat center;
+                        background-size: cover;
+                }
 
-        .section-products #product-3 .part-1::before {
-                background: url("https://images.pexels.com/photos/1298601/pexels-photo-1298601.jpeg") no-repeat center;
-                background-size: cover;
-        }
-
-        .section-products #product-4 .part-1::before {
-                background: url("https://images.pexels.com/photos/393047/pexels-photo-393047.jpeg") no-repeat center;
-                background-size: cover;
-        }
-</style>
+                .section-products #product-4 .part-1::before {
+                        background: url("https://images.pexels.com/photos/393047/pexels-photo-393047.jpeg") no-repeat center;
+                        background-size: cover;
+                }
+        </style>
+        
 {% endblock %}
+
+        {% block header %}
+
+                {% include 'beta/partials/nav-notification.html' %}
+
+        {% endblock %}
+
+
 
 {% block content %}
 <section class="section-products">
