--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,8 +1,64 @@
 {% extends 'base.html' %}
 
 {% block stylesheet %}
+<link href="{{ url_for('static', filename='css/shop.css') }}" rel="stylesheet">
 <link href="{{ url_for('static', filename='css/notification.css') }}" rel="stylesheet">
 <script src="{{url_for('static',filename='js/notification.js')}}"> </script>
+<style>
+    .section-products #product-1 .part-1::before {
+        background: url("https://images.pexels.com/photos/788946/pexels-photo-788946.jpeg") no-repeat center;
+        background-size: cover;
+        transition: all 0.3s;
+    }
+
+    .section-products #product-2 .part-1::before {
+        background: url("https://images.pexels.com/photos/205926/pexels-photo-205926.jpeg") no-repeat center;
+        background-size: cover;
+    }
+
+    .section-products #product-3 .part-1::before {
+        background: url("https://images.pexels.com/photos/1298601/pexels-photo-1298601.jpeg") no-repeat center;
+        background-size: cover;
+    }
+
+    .section-products #product-4 .part-1::before {
+        background: url("https://images.pexels.com/photos/393047/pexels-photo-393047.jpeg") no-repeat center;
+        background-size: cover;
+    }
+
+    .section-products #product-5 .part-1::before {
+        background: url("https://images.pexels.com/photos/393047/pexels-photo-393047.jpeg") no-repeat center;
+        background-size: cover;
+    }
+
+    .section-products #product-6 .part-1::before {
+        background: url("https://images.pexels.com/photos/788946/pexels-photo-788946.jpeg") no-repeat center;
+        background-size: cover;
+        transition: all 0.3s;
+    }
+
+    .section-products #product-7 .part-1::before {
+        background: url("https://images.pexels.com/photos/205926/pexels-photo-205926.jpeg") no-repeat center;
+        background-size: cover;
+    }
+
+    .section-products #product-8 .part-1::before {
+        background: url("https://images.pexels.com/photos/1298601/pexels-photo-1298601.jpeg") no-repeat center;
+        background-size: cover;
+    }
+
+    .section-products #product-9 .part-1::before {
+        background: url("https://images.pexels.com/photos/393047/pexels-photo-393047.jpeg") no-repeat center;
+        background-size: cover;
+    }
+
+    .section-products #product-10 .part-1::before {
+        background: url("https://images.pexels.com/photos/393047/pexels-photo-393047.jpeg") no-repeat center;
+        background-size: cover;
+    }
+</style>
+
+
 {% endblock %}
 
 {% block header %}
@@ -11,5 +67,41 @@
 
 {% endblock %}
 
-{% block content  %}
+{% block content %}
+<section class="section-products">
+    <div class="container">
+        <div class="row justify-content-center text-center">
+            <div class="col-md-8 col-lg-6">
+                <div class="header">
+                   
+                    <h2>Liked Products</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            {% for product in products %}
+
+            <!-- Single Product -->
+            <div class="col-md-6 col-lg-4 col-xl-3">
+                <div id="product-{{ product }}" class="single-product">
+
+                    <div class="part-1">
+                        <ul>
+                            <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+                            <li><a onclick="onclickevent('heart', 1)" href="#"><i class="fas fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fas fa-plus"></i></a></li>
+                            <li><a href="#"><i class="fas fa-expand"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="part-2">
+                        <h3 class="product-title">Here Product Title</h3>
+                        <h4 class="product-old-price">$79.99</h4>
+                        <h4 class="product-price">$49.99</h4>
+                    </div>
+                </div>
+            </div>
+
+            {% endfor %}
+        </div>
+</section>
 {% endblock %}
