add bell_icon feature flag

--- a/app/templates/beta/partials/nav-notification.html
+++ b/app/templates/beta/partials/nav-notification.html
@@ -19,8 +19,8 @@
                 <!-- hidden link -->
                 <!-- <li class="nav-item"> <a class="nav-link" href="#">Career</a> </li> -->
             </ul>
+            {% if bell_icon %}
             <div class="icon" id="bell"> <img src="https://i.imgur.com/AC7dgLA.png" alt=""> </div>
-
             <div class="notifications " id="box">
                 <h2>Notifications - <span>2</span></h2>
                 <div class="notifications-item"> <i class="fas fa-shopping-bag" style="padding: 10px"></i>
@@ -36,6 +36,7 @@
                     </div>
                 </div>
             </div>
+            {% endif %}
             <button class="btn btn-outline-light d-flex me-2"> <a class="nav-link"
                     href="{{ url_for('core.dashboard')}}">Dashboard</a> </button>
 
