--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav id="nav-dark" class="navbar navbar-expand-lg navbar-dark bg-primary">
     <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> -->
     <div class="container-fluid">
         <a class="navbar-brand" href="{{url_for('core.index')}}">LD Demo</a>
